--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "main": "kernel.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron . --use-gl=desktop"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "electron": "^35.1.4"
+    "electron": "^35.2.1"
   },
   "dependencies": {
     "canvas": "^3.1.0",
